# pacote_cores_gumaso

./: LICENSE  README.md  pyproject.toml
src/pacote_cores_gumaso/: example.py
src/pacote_cores_gumaso.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
