[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pacote_cores_gumaso"
version = "0.0.1"
authors = [
  { name="Gustavo Macedo", email="gustavomacedosousa013@gmail.com" },
]
description = "Uma biblioteca para formatação de cores de fundo e letras em saídas de terminal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"